--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@tabler/icons-react": "^3.28.1",
     "add": "^2.0.6",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.471.0",
     "metadata-scraper": "^0.2.61",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
