--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-link-preview": "^1.0.6",
     "yarn": "^1.22.22",
     "zod": "^3.24.1"
   },
